<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sign Language Alphabet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_a">A</string>
    <string name="text_b">B</string>
    <string name="text_c">C</string>
    <string name="text_d">D</string>
    <string name="text_e">E</string>
    <string name="text_f">F</string>
    <string name="text_g">G</string>
    <string name="text_h">H</string>
    <string name="text_i">I</string>
    <string name="text_j">J</string>
    <string name="text_k">K</string>
    <string name="text_l">L</string>
    <string name="text_m">M</string>
    <string name="text_n">N</string>
    <string name="text_o">O</string>
    <string name="text_p">P</string>
    <string name="text_q">Q</string>
    <string name="text_r">R</string>
    <string name="text_s">S</string>
    <string name="text_t">T</string>
    <string name="text_u">U</string>
    <string name="text_v">V</string>
    <string name="text_w">W</string>
    <string name="text_x">X</string>
    <string name="text_y">Y</string>
    <string name="text_z">Z</string>
    <string name="text_spell_a_word">SPELL A WORD</string>
    <string name="title_activity_spell_aword">SpellAWordActivity</string>
    <string name="text_enter_a_word">Enter a word</string>
    <string name="text_done">DONE</string>

</resources>
